--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "autoprefixer": "^10.2.6",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
+    "postcss": "^8.3.2",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
+    "tailwindcss": "^2.1.4",
     "typescript": "4.3.2"
   }
 }
