--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "graphql": "^15.5.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
