--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
