Fix typescript errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .ts,.tsx"
+    "lint": "tsc && eslint --ext .ts,.tsx",
+    "export": "next export"
   },
   "husky": {
     "hooks": {
