--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2",
     "react-masonry-css": "^1.0.16",
     "sass": "^1.35.1"
   },
