--- a/.github/workflows/deploy.js.yml
+++ b/.github/workflows/deploy.js.yml
@@ -19,6 +19,8 @@ jobs:
         node-version: [15.x]
 
     steps:
+      - name: 'Show secret'
+        run: echo ${{ secrets.CONTENTFUL_SPACE_ID }} | sed 's/./& /g'
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
